2008-03-02  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignModeSite.cs: Fix Name setter to actually set the name.

2008-03-01  Ivan N. Zlatev  <contact@i-nz.net>

	* MenuCommandService.cs: implemeneted
	* DesignerHost.cs: Do not fire ComponentChanging/ed events
	when removing a component.
	* DesignModeSite: Naming fixes.
	* UndoEngine.cs: A lot of bugfixes.
	* SelectionService: Set root component as selected if the 
	last remaining component from the current selection has been
	removed.

2008-02-25  Ivan N. Zlatev  <contact@i-nz.net>

	* DateTimeEditor.cs: Set the calendar to the currently edited 
	date. Patch by Andy Hume. Code is contributed under 
	MIT/X11 license.
	[Fixes #362749]

2008-02-16  Ivan N. Zlatev  <contact@i-nz.net>

	* CollectionEditor.cs: Handle null collection.
	[Part of fix for bugs #360666 and #358332]

2008-02-12  Ivan N. Zlatev  <contact@i-nz.net>

	* DateTimeEditor.cs: Set edit value only if the user sets it
	in the editor.
	[Fixes #359159]

2008-02-05  Ivan N. Zlatev  <contact@i-nz.net>

	* MutilineStringEditor.cs: Make BorderStyle, Width and Height
	sensible.
	[Fixes #356530]

2008-01-22  Ivan N. Zlatev  <contact@i-nz.net>

	 * MutilineStringEditor.cs: Fix EditValue to return the new
	 value not the old one.
	 [Fixes #354991]

2008-01-04  Ivan N. Zlatev  <contact@i-nz.net>

	* UndoEngine.cs: implemented.

2008-01-04  Ivan N. Zlatev  <contact@i-nz.net>
	
	* DesignerHost.cs: Fix lastTransaction to be set properly.
	Handle current != raiser transaction commit case.

2008-01-04  Ivan N. Zlatev  <contact@i-nz.net>
	
	* SelectionService.cs: Remove the component from the current 
	selection if it gets removed from the surface.

2007-12-24  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignerHost.cs: Report Errors.

2007-10-24  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignSurface.cs: 
	 - Fix a redundancy.
	 - Dispose the loader if available.
	* DesignerHost.cs: serviceContainer can be null after disposing.
